#===============================================================================
# CMakeLists for source basement
#===============================================================================
add_subdirectory(lib)
add_subdirectory(gurax)
add_subdirectory(unittest)

if (${CMAKE_SYSTEM_NAME} MATCHES Windows)
#add_subdirectory(module-base64)
add_subdirectory(module-bmp)
add_subdirectory(module-bzip2)
#add_subdirectory(module-codecs)
#add_subdirectory(module-codecs_basic)
#add_subdirectory(module-codecs_chinese)
#add_subdirectory(module-codecs_iso8859)
#add_subdirectory(module-codecs_japanese)
add_subdirectory(module-conio)
add_subdirectory(module-diff)
#add_subdirectory(module-fs)
add_subdirectory(module-glfw)
add_subdirectory(module-gzip)
add_subdirectory(module-hash)
add_subdirectory(module-jpeg)
add_subdirectory(module-markdown)
#add_subdirectory(module-math)
add_subdirectory(module-opengl)
#add_subdirectory(module-os)
#add_subdirectory(module-path)
add_subdirectory(module-png)
add_subdirectory(module-re)
#add_subdirectory(module-sys)
add_subdirectory(module-zip)
endif ()
